--- a/package.json
+++ b/package.json
@@ -9,10 +9,7 @@
   "author": "",
   "license": "ISC",
   "bin": {
-    "say-hi": "./cli.js",
-    "ask-me": "./prompt.js",
-    "user-login": "./prompt2.js",
-    "user-create": "./prompt3.js"
+    "build-release": "./build-release.js"
   },
   "dependencies": {
     "prompt": "1.0.0"
