--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cli-tool",
-  "version": "1.0.0",
+  "version": "1.1.2",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -9,9 +9,13 @@
   "author": "",
   "license": "ISC",
   "bin": {
-    "build-release": "./build-release.js"
+    "release": "./create-release.js"
   },
   "dependencies": {
-    "prompt": "1.0.0"
+    "chalk": "^3.0.0",
+    "figlet": "^1.2.4",
+    "inquirer": "^7.0.0",
+    "prompt": "1.0.0",
+    "shelljs": "^0.8.3"
   }
 }
